--- a/style.css
+++ b/style.css
@@ -345,7 +345,7 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
   #header{
-    background-image: url(images/phone-background.png);
+    background-image: url(images/desktop-wallpaper-better-start-of-a-future-technology-background-portfolio.jpg);
   }
 
   /* .container{
